@@ -2024,15 +2024,15 @@ https://story.theopencloset.net/letters/o/<%= $order->id %>/d
 
 @@ returned-1.txt
 % my ($order, $user) = @_;
-[열린옷장] <%= $user->name %>님의 의류가 정상적으로 반납되었습니다. 감사합니다.
+<%= $user->name %> 님의 의류가 정상적으로 반납되었습니다. 감사합니다.
 
-[택배대여 안내] 다음에는 집에서 편하게 온라인으로 주문하세요.
-http://share.theopencloset.net/welcome  클릭하여 신청하시면 됩니다.
+📦 열린옷장 택배대여
+다시 대여할 때는 택배대여를 이용하면 더 편리합니다.
+https://share.theopencloset.net/welcome
 
-[청년정보 안내] 청년과 취업을 응원하는 다양한 프로그램 진행 중입니다.
-열린옷장 SNS를 팔로우하면 놓치지 않고 받을 수 있습니다.
-https://www.instagram.com/opencloset_people/
-https://www.facebook.com/TheOpenCloset/
+📌 열린옷장 인스타그램
+열린옷장에서 진행하는 무료 프로그램과 취준 정보를 볼 수 있습니다.
+https://www.instagram.com/opencloset_suit/
 
 @@ returned-online-1.txt
 % my ($order, $user) = @_;
