@@ -6,6 +6,7 @@ The format is based on [Keep a Changelog](http://keepachangelog.com/).
 ### Changed
 - 대여확정 문자 내용 변경 (https://github.com/opencloset/OpenCloset-Cron-SMS/issues/45)
 - 예약완료 문자 내용 변경 (https://github.com/opencloset/OpenCloset-Cron-SMS/issues/44)
+- 반납문자 내용 변경 (https://github.com/opencloset/OpenCloset-Cron-SMS/issues/36)
 
 ## [v0.1.17] - Sun, 28 Feb 2021 08:36:47 +0900
 ### Added
